common/02-jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: payment-awesome
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: 3600
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    # nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    # nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Accept-Encoding "";
    #  sub_filter '<head>' '<head> <base href="/my-webapp/">';
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: jenkins.payment-awesome.arctic.true.th
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
